--- a/Css/Design One.css
+++ b/Css/Design One.css
@@ -3,6 +3,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  transition: 0.3s;
 }
 :root {
   --main-color: #2196f3;
@@ -102,7 +103,7 @@ ul {
   height: 30px;
   z-index: 1;
   background-image: linear-gradient(135deg, white 25%, transparent 25%),
-    linear-gradient(225deg, white 25%, transparent 25%);
+  linear-gradient(225deg, white 25%, transparent 25%);
   background-size: 30px 30px;
 }
 .dots {
@@ -459,7 +460,148 @@ ul {
 .gallery .box .image:hover img {
   transform: rotate(5deg) scale(1.1);
 }
-
+/* Start Features */
+.features { 
+  position: relative;
+  padding:var(--main-padding-bottom) 0px ;
+}
+.features .container { 
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  gap:40px;
+}
+.features .img-holder img {
+  max-width: 100%;
+}
+.features .img-holder{
+  position: relative;
+  overflow: hidden;
+}
+.features .box {
+  gap: 40px;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 8px;
+  border:1px solid rgba(0, 0, 0, 0.247);
+}
+.features .box:hover {
+  transform: translateY(-10px);
+}
+.features .box .img-holder::before{
+  content:"";
+  position:absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+}
+.features .quality .img-holder::before{
+  background-color:rgba(255, 49, 49, 0.5);
+}
+.features .time .img-holder::before{
+  background-color:rgba(0, 158, 111, 0.5);
+}
+.features .passion .img-holder::before{
+  background-color:rgba(31, 135, 255, 0.5);
+}
+.features .box .img-holder::after {
+  content:"";
+  position: absolute;
+  right:0;
+  bottom:0px;
+  border-style: solid;
+  border-width: 0 0 170px 500px;
+  border-color: transparent transparent white transparent ;
+  transition: 0.3s;
+}
+.features .container .box_quality h2{
+  border-bottom:2px solid red ;
+}
+.features .box .img-holder:hover::after{
+  border-width: 0 500px 170px 500px;
+}
+.features .box h2 {
+  font-size: 40px;
+  padding:10px 0px;
+  margin:auto;
+  width:fit-content;
+  position: relative;
+}
+.features .box h2::after {
+  content:"";
+  position:absolute;
+  left:15px;
+  bottom:-5px;
+  border-radius: 3px;
+  width: calc(100% - 30px);
+  height:5px;
+}
+.features .box p { 
+  font-size: 20px;
+  padding:10px 20px;
+  color:grey;
+  line-height:2;
+}
+.features .quality h2::after {
+  background: rgba(255, 0, 0, 0.80);
+}
+.features .time h2::after {
+  background:rgba(0, 238, 167, 0.8);
+}
+.features .passion h2::after {
+  background: rgba(0, 119, 255, 0.8);
+}
+.features .box a {
+  position: relative;
+  display:block;
+  margin:auto;
+  margin-bottom: 30px;
+  padding:8px 25px;
+  border: 3px solid black;
+  border-radius: 5px;
+  font-size: 25px;
+  font-weight: bold;
+  width:fit-content;
+  overflow: hidden;
+}
+.features .quality a {
+  border-color: rgba(255, 0, 0, 0.80);
+  color:rgba(255, 0, 0, 0.80);
+}
+.features .time a {
+  border-color:rgba(0, 238, 167, 0.8);
+  color:rgba(0, 238, 167, 0.8);
+}
+.features .passion a {
+  border-color: rgba(0, 119, 255, 0.8);
+  color:rgba(0, 119, 255, 0.8);
+}
+.features .box a::before {
+  content:"";
+  position: absolute;
+  left:-100%;
+  z-index:-1;
+  top: 0;
+  width:100%;
+  height:100%;
+  transition: 0.3s;
+}
+.features .quality a::before {
+  background-color: rgba(255, 0, 0, 0.80);
+}
+.features .time a::before {
+  background-color: rgba(0, 238, 167, 0.8);
+}
+.features .passion a::before {
+  background-color: rgba(0, 119, 255, 0.8);
+}
+.features .box:hover a::before {
+  left:0;
+}
+.features .box:hover a {
+  color:white;
+}
+/* End Features */
 /* Start Animation */
 @keyframes up-and-down {
   0%,
