--- a/Css/Design One.css
+++ b/Css/Design One.css
@@ -517,7 +517,7 @@ ul {
 .features .container .box_quality h2{
   border-bottom:2px solid red ;
 }
-.features .box .img-holder:hover::after{
+.features .box:hover .img-holder::after{
   border-width: 0 500px 170px 500px;
 }
 .features .box h2 {
@@ -602,6 +602,117 @@ ul {
   color:white;
 }
 /* End Features */
+/* Start Testimonials */
+.testimonials {
+  position: relative;
+  padding:var(--main-padding-bottom) 0px ;
+  background-color: #ECECEC;
+}
+.testimonials .container {
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  gap:40px;
+}
+.testimonials .box {
+  position: relative;
+  padding:0px 20px;
+  margin:0;
+  background-color:white;
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+}
+.testimonials .box img {
+  position:absolute;
+  right:-10px;
+  top:-50px;
+  width:100px;
+  border-radius: 50%;
+  border:10px solid #ECECEC;
+}
+.testimonials .box h3 {
+  color:var(--main-color-alt);
+  margin:0;
+  padding:15px 0;
+}
+.testimonials .box .title {
+  color:rgb(117, 117, 117);
+  margin-bottom: 10px;
+  display: block;
+}
+.testimonials .box p {
+  color: rgb(117, 117, 117);
+  line-height: 1.5;
+}
+.testimonials .box i {
+  color:gold;
+}
+/* End Testimonials */
+/* Start Team */
+.team {
+  position: relative;
+  padding:var(--main-padding-bottom) 0px ;
+}
+.team .container {
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+  gap:30px;
+}
+.team .box {
+  position: relative;
+}
+.team .box::before {
+  content:"";
+  z-index: -1;
+  background-color:rgba(119, 119, 119, 0.089);
+  position: absolute;
+  right:0;
+  height:100%;
+  width:calc(100% - 60px);
+  border-radius: 10px;
+  transition: 0.3s;
+}
+.team .container .data {
+  display: flex;
+  align-items: center;
+  padding-top:60px;
+}
+.team .container img {
+
+  width:calc(100% - 60px);
+  border-radius: 10px;
+}
+.team .social {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  width:60px;
+}
+.team .social a {
+  padding:16px;
+  color:#777;
+}
+.team .info {
+  padding:0 80px;
+}
+.team .info h3 {
+  color:var(--main-color);
+  font-size:22px;
+  margin-bottom:0;
+}
+.team .info p {
+  margin-top:10px;
+  margin-bottom:20px;
+}
+.team .box i:hover {
+  color:var(--main-color);
+}
+.team .box:hover img {
+  transform: scale(1.02);
+}
+.team .box:hover::before {
+  background-color: rgba(128, 128, 128, 0.25);
+}
+/* End Team */
 /* Start Animation */
 @keyframes up-and-down {
   0%,
